# php-scripting

./: .gitignore  CMakeLists.txt
apps/: CMakeLists.txt  app.cpp
include/php_scripting/: php_module.hpp  vm.hpp
scripts/: example.php
src/: CMakeLists.txt  php_module.cpp  vm.cpp
